--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
-            background-color: #224d42;
+            background-color: #b7ccc7;
 
         }
         h1 {
